fixed alignment of text on cards

--- a/module1-project.css
+++ b/module1-project.css
@@ -172,7 +172,11 @@ h1 {
 
 .spTextAlignTop {
   margin: 0;
-  padding-top: 10px;
+  padding-bottom: 15px;
+}
+
+.tdTextAlign {
+  margin: 0;
 }
 
 #toDoInfo::before {
